# open-amp

apps/examples/: CMakeLists.txt
apps/examples/apu/: Android.bp  CMakeLists.txt  README
apps/examples/apu/device/: CMakeLists.txt  apu.c  test.c
apps/examples/apu/device/xrp/: CMakeLists.txt  dsp_test.c  xrp_dsp.c  xrp_ns.c
apps/examples/apu/host/: .gitignore  Makefile  apu.c  ion.c  ion.h  memory.c  test.c
apps/examples/apu/host/xrp/: xrp.c
apps/examples/apu/include/rich-iot/: apu-device.h  apu-host.h  apu-test.h  apu.h  memory.h
apps/examples/apu/include/uapi/: mtk_apu.h
apps/examples/matrix_multiply/: matrix_multiply.c
apps/examples/rpc_demo/: rpc_demo.c
apps/machine/mt8183_apu/: CMakeLists.txt  memory.h  platform_info.c  platform_info.h  platform_rproc.c  printf.c  rsc_table.c  rsc_table.h
apps/system/generic/machine/mt8183_apu/: CMakeLists.txt  helper.c  memmap.xmm
apps/system/generic/machine/mt8183_apu/ldscripts/: elf32xtensa.x  elf32xtensa.xbn  elf32xtensa.xn  elf32xtensa.xr  elf32xtensa.xu
lib/remoteproc/: remoteproc.c
